PLANET-3022 - Search icon: Fix vertical alignment for RTL (#714)

--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -467,7 +467,7 @@ $menu-height-large: 3.75rem;
     .icon {
       vertical-align: middle;
       font-size: 1.3125rem;
-      top: 0;
+      top: 5px;
     }
 
     @include large-and-up {
